[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Planets/PlanetSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Wells/Planet.gd" type="Script" id=2]
[ext_resource path="res://Assets/Planets/PlanetStatus.png" type="Texture" id=3]
[ext_resource path="res://Assets/Planets/PlanetStatusGray.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 240.363

[sub_resource type="CircleShape2D" id=2]
radius = 245.384

[sub_resource type="CircleShape2D" id=3]
radius = 604.003

[node name="Planet" type="Node2D" groups=[
"planets",
]]
scale = Vector2( 4, 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ -100.148, 99.7619 ]
}

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 1 )

[node name="Landing" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Landing"]
shape = SubResource( 2 )

[node name="Arrival" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arrival"]
shape = SubResource( 3 )

[node name="Constructions" type="Node2D" parent="."]

[node name="PlanetSprite" parent="." instance=ExtResource( 1 )]
scale = Vector2( 1.11733, 1.11733 )

[node name="RotateMe" type="Node2D" parent="."]

[node name="Prog" type="Node2D" parent="."]

[node name="CaptureProgress" type="TextureProgress" parent="Prog"]
self_modulate = Color( 0.494118, 1, 0.180392, 0.392157 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -456.0
margin_top = -456.0
margin_right = 456.0
margin_bottom = 456.0
step = 0.1
texture_progress = ExtResource( 3 )
fill_mode = 4
radial_initial_angle = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unclaimed" type="NinePatchRect" parent="Prog/CaptureProgress"]
self_modulate = Color( 1, 1, 1, 0.337255 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Planet" type="Label" parent="Prog"]
margin_left = -128.0
margin_top = 264.0
margin_right = 128.0
margin_bottom = 304.0
text = "Planet"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceStation" type="Position2D" parent="."]
position = Vector2( 483.2, -348.8 )
[connection signal="area_shape_entered" from="Landing" to="." method="_on_Landing_area_shape_entered"]
[connection signal="area_shape_exited" from="Landing" to="." method="_on_Landing_area_shape_exited"]
[connection signal="body_entered" from="Arrival" to="." method="_on_Arrival_body_entered"]
[connection signal="body_exited" from="Arrival" to="." method="_on_Arrival_body_exited"]
